<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primaryColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectionMenuActivity">

    <ImageView
        android:layout_width="120dp"
        android:id="@+id/logoApp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"

        android:src="@drawable/logo2" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/logoApp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llEinfach"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/shapeselector"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Easy"
                android:textColor="@color/white"
                android:textSize="30dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMittel"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/shapeselector"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Medium"
                android:textColor="@color/white"
                android:textSize="30dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llHard"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/shapeselector"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Hard"
                android:textColor="@color/white"
                android:textSize="30dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llScores"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/shapeselector"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/heightS"
                android:textColor="@color/white"
                android:textSize="30dp" />

        </LinearLayout>

    </LinearLayout>




</RelativeLayout>