<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#ff9999"
    android:layout_gravity="center"

    android:layout_height="@dimen/_200sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Opps"
            android:id="@+id/txtLoss"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"/>

        <LinearLayout
            android:id="@+id/btnTryAgain"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/game_out_shape">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TryAgain"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"/>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/btnMainMenu"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/game_out_shape">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toMainMenu"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"/>



        </LinearLayout>


    </LinearLayout>






</androidx.cardview.widget.CardView>