<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryColor"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="#00468c">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_array_back" />

        <TextView
            android:id="@+id/ic_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_width="@dimen/_250sdp"

        android:layout_height="@dimen/_250sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:id="@+id/deinScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/YourScore"
            android:textColor="@color/white"
            android:textSize="@dimen/_32sdp" />

        <TextView
            android:id="@+id/txtScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/deinScore"
            android:layout_centerInParent="true"
            android:text="@string/YourScore"
            android:textColor="@color/green"
            android:textSize="@dimen/_32sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@+id/rl2"
        >

        <LinearLayout
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:background="@drawable/share_shape"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ShareYourScore"
                android:textColor="@color/white" />
        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>