<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryColor"
    >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="#00468c">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_array_back" />

        <TextView
            android:id="@+id/ic_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="@dimen/_50sdp"
        android:id="@+id/showStats1"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_70sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_35sdp"
        android:background="@drawable/next_btn_shape"
        android:gravity="center">

        <TextView
            android:id="@+id/txtGame1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="NEXT"
            android:textColor="@color/white"
            android:textSize="@dimen/_25sdp" />


    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_marginTop="@dimen/_90sdp"
        android:id="@+id/card1"
        android:layout_width="@dimen/_268sdp"
        android:layout_centerHorizontal="true"
        android:layout_height="@dimen/_50sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:backgroundTint="#00468c"
        android:layout_below="@+id/header"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="Score: "
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/displayScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_80sdp"
                android:text="120"
                android:textColor="@color/green"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_130sdp"
                android:text="@string/Level"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/displayLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_190sdp"
                android:text="@string/Easy"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/showStats2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"

        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_220sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:background="@drawable/next_btn_shape"
        android:gravity="center">

        <TextView
            android:id="@+id/txtGame2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="NEXT"
            android:textColor="@color/white"
            android:textSize="@dimen/_25sdp" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="@dimen/_100sdp"
        android:id="@+id/card2"
        android:layout_width="@dimen/_268sdp"
        android:layout_centerHorizontal="true"
        android:layout_height="@dimen/_50sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:backgroundTint="#00468c"
        android:layout_below="@+id/card1"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="Score: "
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/displayScore2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_80sdp"
                android:text="120"
                android:textColor="@color/green"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_130sdp"
                android:text="@string/Level"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/displayLevel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_190sdp"
                android:text="@string/Medium"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="@dimen/_50sdp"
        android:id="@+id/showStats3"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_360sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:background="@drawable/next_btn_shape"
        android:gravity="center">

        <TextView
            android:id="@+id/txtGame3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="NEXT"
            android:textColor="@color/white"
            android:textSize="@dimen/_25sdp" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="@dimen/_90sdp"
        android:layout_width="@dimen/_268sdp"
        android:layout_centerHorizontal="true"
        android:layout_height="@dimen/_50sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:backgroundTint="#00468c"
        android:layout_below="@+id/card2"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="Score: "
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/displayScore3"
                android:layout_height="wrap_content"
                android:text="120"
                android:textColor="@color/green"
                android:textSize="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_80sdp"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_130sdp"
                android:text="@string/Level"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/displayLevel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_190sdp"
                android:text="@string/Hard"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>











</RelativeLayout>